# NESEmulator

./: .gitignore  README.md  TODO.md
Client/Cocoa/: .gitignore  build.sh
Client/Cocoa/Sources/: AppDelegate.m  KeyCodeFormatter.m  NESGameCollectionViewItem.h  NESGameCollectionViewItem.xib  NESGameViewController.h  NESGameWindowController.xib  NESKeyMap.h  NESKeyMap.m  NESKeyMapViewController.h  NESLibrary.h  NESLibrary.m  NESLibraryViewController.m  NESView.h  NESView.m  NSUserDefaults+NESKeyMap.h  NSUserDefaults+NESKeyMap.m  main.m
Client/Cocoa/nescocoa.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Client/Cocoa/nescocoa.xcodeproj/xcshareddata/xcschemes/: nescocoa.xcscheme
Disassembler/: NOTES  disassebler6502.ex  disassembler6502.ex  extract-prg.exs  nes-dasm.exs  rom-info.exs
Drivers/cocoa/: CMakeLists.txt
Drivers/cocoa/Sources/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  KeyCodeFormatter.h  KeyCodeFormatter.m  NESGame.h  NESGame.m  NESGameCollectionViewItem.h  NESGameCollectionViewItem.m  NESGameCollectionViewItem.xib  NESGameCollectionViewItemDelegate.h  NESGameViewController.h  NESGameViewController.m  NESGameWindowController.h  NESGameWindowController.m  NESKeyMap.h  NESKeyMap.m  NESKeyMapViewController.h  NESKeyMapViewController.m  NESKeyMapViewController.xib  NESKeyMapViewControllerDelegate.h  NESLibrary.m  NESLibraryViewController.h  NESLibraryViewController.m  NESView.h  NESView.m
Drivers/cocoa/Sources/Assets.xcassets/cartridge.imageset/: Contents.json
Drivers/cocoa/Sources/Base.lproj/: MainMenu.xib
Drivers/cocoa/nescocoa.xcodeproj/: project.pbxproj
Drivers/cocoa/nescocoa.xcodeproj/project.xcworkspace/xcuserdata/kacperraczy.xcuserdatad/: UserInterfaceState.xcuserstate
Drivers/cocoa/nescocoa.xcodeproj/xcshareddata/xcschemes/: nescocoa.xcscheme
Drivers/cocoa/nescocoa.xcodeproj/xcuserdata/kacperraczy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Drivers/cocoa/nescocoa.xcodeproj/xcuserdata/kacperraczy.xcuserdatad/xcschemes/: xcschememanagement.plist
Drivers/cocoa/nescocoa/nescocoa/: AppDelegate.m  Info.plist
Drivers/cocoa/nescocoa/nescocoa.xcodeproj/: project.pbxproj
Drivers/cocoa/nescocoa/nescocoa.xcodeproj/project.xcworkspace/xcuserdata/kacperraczy.xcuserdatad/: UserInterfaceState.xcuserstate
Drivers/cocoa/nescocoa/nescocoa.xcodeproj/xcuserdata/kacperraczy.xcuserdatad/xcschemes/: xcschememanagement.plist
Drivers/cocoa/nescocoa/nescocoa/Base.lproj/: MainMenu.xib
Emulator/: CMakeLists.txt  NOTES
Emulator/6502/: CMakeLists.txt  addr.c  addr.h  asm.c  asm.h  parser.c  parser.h  state.c  state.h
Emulator/6502/handlers/: arithmetic.c  arithmetic.h  branch.c  branch.h  illegal.c  illegal.h  memory.c  memory.h  other.c  other.h  stack.c  stack.h
Emulator/6502lib/: CMakeLists.txt  addr.c  addr.h  asm.c  asm.h  instruction.c  instruction.h  parser.c  parser.h  state.c  state.h
Emulator/6502lib/handlers/: arithmetic.c  branch.c  branch.h  other.c  other.h  stack.c
Emulator/common/: CMakeLists.txt  debug.h  utility.c  utility.h
Emulator/nes/: CMakeLists.txt  cartridge.c  cartridge.h  console.c  console.h  controller.c  controller.h  debug.h  mapper.c  mapper.h
Emulator/nes/mappers/: mapper0.c  mapper0.h  mapper1.c  mapper1.h  mapper2.c  mapper2.h  mapper3.c  mapper3.h
Emulator/ppu/: CMakeLists.txt  NOTES  color.c  color.h  ppu.c  ppu.h  renderer.c  renderer.h
Emulator/test/: CMakeLists.txt  arithmetic.c  flags.c  memory.c  pc.c  playground.c  playground2.c  test.h
Emulator/test/cpu/: arithmetic.c  cputest.h  flags.c  int.c  memory.c  pc.c
Emulator/test/nes/: cartridge.c  cartridge.cpp  debug.c  romtest.cpp  run.c
Emulator/test/ppu/: bg.cpp  memory.cpp  pputest.h  render.cpp  sprites.c  sprites.cpp
Emulator/tools/: CMakeLists.txt  debug.c  render.cpp
Roms/: cartridge_test1.nes  cartridge_test2.nes
Scripts/: dprocess.sh
